clean up some other language things